slider animation background visiblity issue fixed

--- a/src/components/SliderModal/slidermodal.module.css
+++ b/src/components/SliderModal/slidermodal.module.css
@@ -1,29 +1,38 @@
 .sliderModalWrapper {
-    position: absolute;
+    position: fixed;
     top: 0;
-    left: 0;
+    /* right: 0; */
     width: 100%;
     height: 100%;
     z-index: 1;
     overflow: hidden;
     background: transparent;
-    visibility: hidden;
-    transition: background-color 0.2s ease-out;
+    right: -100%;
+    transition: background-color 0.1s ease-in;
 }
 
 .sliderModalWrapperBackdrop {
-    visibility: visible;
+    right: 0;
     background-color: rgb(0, 0, 0, 0.5);
+}
+
+.sliderModalWrapperBackdropInActive {
+    transition: right 0.3s ease-in;
 }
 
 .sliderContentWrapper {
     position: absolute;
     height: 100%;
-    right: -100%;
-    transition: right 0.3s ease-out;
+    /* right: -100%; */
     overflow-y: auto;
 }
 
 .sliderContentActive {
+    transition: right 0.2s ease-in;
     right: 0;
+}
+
+.sliderContentInActive {
+    transition: right 0.2s ease-in;
+    right: -100%;
 }
